--- a/the-fascinator/contrib/fascinator/plugins/harvester/skos/trunk/pom.xml
+++ b/the-fascinator/contrib/fascinator/plugins/harvester/skos/trunk/pom.xml
@@ -13,7 +13,7 @@
         <version>1.0.2</version>
     </parent>
     <properties>
-        <fascinator.version>1.0.7-SNAPSHOT</fascinator.version>
+        <fascinator.version>1.0.7</fascinator.version>
     </properties>
     <dependencies>
         <dependency>
