--- a/the-fascinator/contrib/fascinator/plugins/harvester/skos/trunk/pom.xml
+++ b/the-fascinator/contrib/fascinator/plugins/harvester/skos/trunk/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.googlecode.the-fascinator.plugins</groupId>
     <artifactId>plugin-harvester-skos</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.1.1-SNAPSHOT</version>
     <name>Fascinator - Plugin - Harvester - SKOS</name>
     <description>Performs a batch harvest of any SKOS Concept Shemes</description>
     <url>https://sites.google.com/site/fascinatorhome/home/documentation/technical/documents/common-library/plugins/harvester</url>
@@ -13,7 +13,7 @@
         <version>1.0.2</version>
     </parent>
     <properties>
-        <fascinator.version>1.1</fascinator.version>
+        <fascinator.version>1.1.1-SNAPSHOT</fascinator.version>
     </properties>
     <dependencies>
         <dependency>
